<resources>
    <string name="app_name">YearbookProjectVer05</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="No_Account_RegisterNow">No Account? Register Now!</string>
    <string name="Already_have_an_account_Login">Already have and account? Login here!</string>
    <string name="Login">Login</string>
    <string name="Register">register</string>

    <string name="action_bar_name">MiVYB - My Virtual Yearbook</string>
    <string name="First_Name">First Name</string>
    <string name="Middle_Name">Middle Name</string>
    <string name="Maiden_Name">Maiden Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Mobile">Mobile #</string>
    <string name="Email">Email</string>
    <string name="Facebook_URL">Facebook URL</string>
    <string name="Home">Home</string>
    <string name="Dashboard">Dashboard</string>
    <string name="My_Yearbook">My Yearbook</string>
    <string name="Chat">Chat</string>
    <string name="Profile">Profile</string>

    //MENU SETTINGS
    <string name="Menu">Menu</string>
    <string name="Home_Setting">Home Setting</string>
    <string name="My_Dashboard_Settings">Dashboard Setting</string>
    <string name="New_Item_Dashboard_Settings">Add | Remove Item</string>
    <string name="Yearbook_Setting">Yearbook Setting</string>
    <string name="Chat_Setting">Chat Setting</string>
    <string name="Profile_Setting">Profile Setting</string>

    <string name="My_School">My School</string>
    <string name="Add_School">Add School</string>
    <string name="Edit_School">Edit School</string>
    <string name="Delete_School">Delete School</string>

    <string name="School_Logo">School Logo Setting</string>
    <string name="Add_School_logo">Add School logo</string>
    <string name="Edit_School_logo">Edit School logo</string>
    <string name="Delete_School_logo">Delete School logo</string>

    <string name="My_Batch">My Batch</string>
    <string name="Add_Batch">Add Batch</string>
    <string name="Edit_Batch">Edit Batch</string>
    <string name="Delete_Batch">Delete Batch</string>

    <string name="My_Section">My Section</string>
    <string name="Add_Section">Add Section</string>
    <string name="Edit_Section">Edit Section</string>
    <string name="Delete_Section">Delete Section</string>

    <string name="My_Yearbook_Settings">My Yearbook Settings</string>
    <string name="Add_Classmate">Add Classmate</string>
    <string name="Edit_Classmate">Edit Classmate</string>
    <string name="Delete_Classmate">Delete Classmate</string>

    <string name="Privacy_Setting">Privacy Setting</string>
    <string name="Private">Private</string>
    <string name="Public">Public</string>

    <string name="Logout">Logout</string>

    //================================
    <string name="MiVYB">MiVYB</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation_menu">NavigationMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>