<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mivyb_activityBg"
    tools:context=".MenuSettingsActivity">
    <ImageView
        android:id="@+id/imgRetroBG"
        android:layout_width="511dp"
        android:layout_height="837dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/retro_png_bg" />

    <TextView
        android:id="@+id/tvMyYearbookSetting"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/My_Yearbook"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvMySectionSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvDeleteBatch3" />

    <TextView
        android:id="@+id/tvEditClassmate"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:paddingStart="24dp"
        android:text="@string/Edit_Classmate"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvMyYearbookSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvAddClassmate" />

    <TextView
        android:id="@+id/tvDeleteClassmate"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:paddingStart="24dp"
        android:text="@string/Delete_Classmate"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvMyYearbookSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvEditClassmate" />

    <TextView
        android:id="@+id/tvAddClassmate"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:paddingStart="24dp"
        android:text="@string/Add_Classmate"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvMyYearbookSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvMyYearbookSetting" />

    <TextView
        android:id="@+id/tvSchoolLogoSettings"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:paddingStart="24dp"
        android:text="@string/School_Logo"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvEditSchool"
        app:layout_constraintTop_toBottomOf="@+id/tvDeleteSchool" />

    <TextView
        android:id="@+id/tvProfileSetting"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/Profile_Setting"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Menu"
        app:layout_constraintTop_toBottomOf="@+id/Menu" />

    <TextView
        android:id="@+id/tvMySectionSetting"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/My_Section"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvMyBatchSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvDeleteBatch" />

    <TextView
        android:id="@+id/tvYearbookSetting"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/My_Yearbook"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvProfileSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileSetting" />

    <TextView
        android:id="@+id/tvAddSection"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:paddingStart="24dp"
        android:text="@string/Add_Section"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvMySectionSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvMySectionSetting" />

    <TextView
        android:id="@+id/tvDeleteBatch3"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:paddingStart="24dp"
        android:text="@string/Delete_Section"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvEditBatch3"
        app:layout_constraintTop_toBottomOf="@+id/tvEditBatch3" />

    <TextView
        android:id="@+id/tvEditBatch3"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:paddingStart="24dp"
        android:text="@string/Edit_Section"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvAddSection"
        app:layout_constraintTop_toBottomOf="@+id/tvAddSection" />

    <TextView
        android:id="@+id/Menu"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/Menu"
        android:textAllCaps="true"
        android:textColor="@color/mivyb_dark"
        android:textColorHighlight="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMySchoolSetting"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="5dp"
        android:text="@string/My_School"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvYearbookSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvYearbookSetting" />

    <TextView
        android:id="@+id/tvAddSchool"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:paddingStart="24dp"
        android:text="@string/Add_School"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvMySchoolSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvMySchoolSetting" />

    <TextView
        android:id="@+id/tvEditSchool"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:paddingStart="24dp"
        android:text="@string/Edit_School"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvAddSchool"
        app:layout_constraintTop_toBottomOf="@+id/tvAddSchool" />

    <TextView
        android:id="@+id/tvDeleteSchool"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:paddingStart="24dp"
        android:text="@string/Delete_School"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvEditSchool"
        app:layout_constraintTop_toBottomOf="@+id/tvEditSchool" />

    <TextView
        android:id="@+id/tvPrivacySetting4"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/Privacy_Setting"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvYearbookSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvDeleteClassmate" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="24dp"
        android:text="@string/Logout"
        android:textAlignment="viewEnd"
        android:textColor="#FF0000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvPrivacySetting4"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivacySetting4"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/tvMyBatchSetting"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="@string/My_Batch"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvMySchoolSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvSchoolLogoSettings" />

    <TextView
        android:id="@+id/tvEditBatch"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:paddingStart="24dp"
        android:text="@string/Edit_Batch"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvAddBatch"
        app:layout_constraintTop_toBottomOf="@+id/tvAddBatch" />

    <TextView
        android:id="@+id/tvDeleteBatch"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:paddingStart="24dp"
        android:text="@string/Delete_Batch"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvEditBatch"
        app:layout_constraintTop_toBottomOf="@+id/tvEditBatch" />

    <TextView
        android:id="@+id/tvAddBatch"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:paddingStart="24dp"
        android:text="@string/Add_Batch"
        android:textColor="@color/mivyb_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tvMyBatchSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvMyBatchSetting" />


</androidx.constraintlayout.widget.ConstraintLayout>