<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="555dp"
        android:layout_height="916dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/retro_png_bg" />

    <TextView
        android:id="@+id/Menu"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:text="@string/Menu"
        android:textAllCaps="true"
        android:textColor="@color/mivyb_dark"
        android:textColorHighlight="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProfileSetting"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="28dp"
        android:text="@string/Profile_Setting"
        android:textColor="@color/mivyb_dark"
        app:layout_constraintStart_toStartOf="@+id/Menu"
        app:layout_constraintTop_toBottomOf="@+id/Menu" />

    <TextView
        android:id="@+id/tvPrivacySetting"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/Privacy_Setting"
        android:textColor="@color/mivyb_dark"
        app:layout_constraintStart_toStartOf="@+id/tvProfileSetting"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileSetting" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/Logout"
        android:textColor="#FF0000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvPrivacySetting"
        app:layout_constraintTop_toBottomOf="@+id/tvPrivacySetting" />

</androidx.constraintlayout.widget.ConstraintLayout>