<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardSettingActivity2">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="400dp"
        android:layout_height="262dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/textFieldMiddleName"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Last_Name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="#000000"
            app:hintTextColor="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                android:layout_width="378dp"
                android:layout_height="232dp"
                android:layout_margin="0dp"
                android:background="#FAFAFA"
                android:textColor="#000000"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAddProfile"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="128dp"
        android:background="#230202"
        android:backgroundTint="#351111"
        android:foregroundTint="#BB0FEA"
        android:shadowColor="#2A2E26"
        android:text="ADD"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:iconTint="#AC2222"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textFieldLastName"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.205"
        app:rippleColor="@color/mivyb_tertiary" />

    <Button
        android:id="@+id/btnLoad"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:background="#230202"
        android:backgroundTint="#351111"
        android:foregroundTint="#BB0FEA"
        android:shadowColor="#2A2E26"
        android:text="LOAD"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:iconTint="#AC2222"
        app:layout_constraintBottom_toBottomOf="@+id/btnDeleteProfile"
        app:layout_constraintStart_toEndOf="@+id/btnDeleteProfile"
        app:layout_constraintTop_toTopOf="@+id/btnDeleteProfile"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="@color/mivyb_tertiary" />

    <Button
        android:id="@+id/btnDeleteProfile"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="4dp"
        android:background="#230202"
        android:backgroundTint="#351111"
        android:foregroundTint="#BB0FEA"
        android:shadowColor="#2A2E26"
        android:text="delete"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:iconTint="#AC2222"
        app:layout_constraintBottom_toBottomOf="@+id/btnUpdate"
        app:layout_constraintStart_toEndOf="@+id/btnUpdate"
        app:layout_constraintTop_toTopOf="@+id/btnUpdate"
        app:rippleColor="@color/mivyb_tertiary" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:background="#230202"
        android:backgroundTint="#351111"
        android:foregroundTint="#BB0FEA"
        android:shadowColor="#2A2E26"
        android:text="update"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:iconTint="#AC2222"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddProfile"
        app:layout_constraintStart_toEndOf="@+id/btnAddProfile"
        app:layout_constraintTop_toTopOf="@+id/btnAddProfile"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="@color/mivyb_tertiary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldFirstName"
        android:layout_width="215dp"
        android:layout_height="55dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="36dp"
        android:hint="@string/First_Name"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:textColorHint="#000000"
        app:hintTextColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/textFieldMiddleName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textFieldMiddleName"
        app:layout_constraintTop_toBottomOf="@+id/imgProfileNew">
        <!--        app:startIconDrawable="@drawable/profile_photo3"-->


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mivyb_activityBg"
            android:textColor="#000000"
            android:textSize="10sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldMiddleName"
        android:layout_width="377dp"
        android:layout_height="58dp"
        android:layout_marginTop="36dp"
        android:hint="@string/Middle_Name"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:textColorHint="#000000"
        app:hintTextColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMiddleName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:background="#FAFAFA"
            android:textColor="#000000"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="UPDATE MY YEARBOOK"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgProfileNew"
        android:layout_width="179dp"
        android:layout_height="178dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:scaleType="fitXY"
        android:src="@drawable/profile_modern"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditProfile" />

    <ImageView
        android:id="@+id/imgGradPic"
        android:layout_width="104dp"
        android:layout_height="120dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="68dp"
        android:scaleType="fitXY"
        android:src="@drawable/profile_gradpic"
        app:layout_constraintStart_toEndOf="@+id/imgProfileNew"
        app:layout_constraintTop_toBottomOf="@+id/tvEditProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>